results/SVCOMP/conversational/log-ExLazy-2024_03_10_16_33_35.txt
class Main {

  //@ requires x == null && y == 0 || x != null;
  //@ ensures x == null && y == 0 ==> System.out.println(1);
  //@ ensures x != null ==> System.out.println(2);
  //@ ensures x != null ==> \false;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ ensures n1 == 0 ==> test(null, 0);
  //@ ensures n1 != 0 ==> test(null, n2);
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:6: error: This backslash token is unknown: \false
  //@ ensures x != null ==> \false;
                            ^
1 error

class Main {

  //@ requires x == null && y == 0 || x != null;
  //@ ensures x == null && y == 0 ==> System.out.println(1);
  //@ ensures x != null ==> System.out.println(2);
  //@ ensures x != null ==> false;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ ensures n1 == 0 ==> test(null, 0);
  //@ ensures n1 != 0 ==> test(null, n2);
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:4: error: incompatible types: void cannot be converted to boolean
  //@ ensures x == null && y == 0 ==> System.out.println(1);
                                                        ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: error: incompatible types: void cannot be converted to boolean
  //@ ensures x != null ==> System.out.println(2);
                                              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:16: error: incompatible types: void cannot be converted to boolean
  //@ ensures n1 == 0 ==> test(null, 0);
                              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:17: error: incompatible types: void cannot be converted to boolean
  //@ ensures n1 != 0 ==> test(null, n2);
                              ^
4 errors

class Main {

  //@ requires x == null && y == 0 || x != null;
  //@ ensures x == null && y == 0;
  //@ ensures x != null;
  //@ ensures false;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ ensures n1 == 0;
  //@ ensures n1 != 0;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
